--- a/download.html
+++ b/download.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <title>Loading...</title>
-    <meta http-equiv="refresh" content="0; url=https://redirectapps.org/cl/i/27lnol">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>تحميل اللعبة</title>
+
+    <!-- OGAds Content Locker -->
+    <script type="text/javascript" src="https://applocked.org/js/27lnol-y.js"></script>
+
     <style>
         body {
-            background: #0d1117;
-            color: #fff;
+            background: #121212;
+            color: white;
             font-family: Arial, sans-serif;
             text-align: center;
-            margin-top: 100px;
+            padding-top: 80px;
         }
     </style>
 </head>
+
 <body>
-    <h2>Redirecting, please wait...</h2>
+
+    <h2>المرجو الانتظار لحظة…</h2>
+    <p>سيتم فتح التحميل بعد إتمام خطوة التحقق.</p>
+
 </body>
 </html>
