--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>game app | Play Top Games & Win Now!</title>
+    <title>Game App | Play Games Now</title>
     <link href="https://fonts.googleapis.com/css?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
+
     <style>
         body {
             font-family: 'Tajawal', Arial, sans-serif;
@@ -14,6 +15,7 @@
             color: #fff;
             min-height: 100vh;
         }
+
         .container {
             max-width: 900px;
             margin: 40px auto;
@@ -22,96 +24,96 @@
             box-shadow: 0 8px 32px rgba(0,0,0,0.28);
             padding: 36px 26px;
         }
+
         header {
             text-align: center;
             margin-bottom: 32px;
         }
+
         .logo {
-            width: 160px;
-            margin-bottom: 20px;
-            border-radius: 14px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.16);
+            width: 110px;
+            margin-bottom: 14px;
+            border-radius: 12px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.12);
             background: #fff;
         }
+
         h1 {
             margin: 0 0 18px 0;
             font-size: 2.5em;
             font-weight: 700;
-            letter-spacing: 2px;
         }
+
         .desc {
-            font-size: 1.22em;
+            font-size: 1.2em;
             color: #B2E1FF;
-            margin-bottom: 24px;
+            margin-bottom: 20px;
         }
+
         .games-gallery {
             display: flex;
             flex-wrap: wrap;
             gap: 18px;
             justify-content: center;
-            margin: 40px 0 14px 0;
+            margin: 38px 0 14px 0;
         }
+
         .game-card {
             background: #081a3c;
             border-radius: 10px;
-            width: 190px;
+            width: 180px;
             text-align: center;
             box-shadow: 0 2px 10px rgba(10,30,50,0.10);
-            padding: 14px 12px 22px;
-            transition: transform 0.2s;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            padding: 14px 10px 20px;
+            transition: 0.2s;
         }
+
         .game-card:hover {
-            transform: scale(1.05);
+            transform: scale(1.06);
             background: #143a7b;
         }
+
         .game-image {
-            width: 115px;
-            height: 115px;
+            width: 110px;
+            height: 110px;
             border-radius: 8px;
             object-fit: cover;
-            margin-bottom: 12px;
+            margin-bottom: 10px;
             background: #eee;
-            box-shadow: 0 1px 7px rgba(0,0,0,0.16);
         }
+
         .game-title {
             font-weight: bold;
-            font-size: 1.15em;
-            margin-bottom: 6px;
-            color: #ffe96b;
+            font-size: 1.1em;
+            margin-bottom: 4px;
         }
-        .game-desc {
-            font-size: 1em;
-            margin-bottom: 13px;
-            color: #e6eeff;
-        }
-        .cta-btn {
+
+        .download-btn {
             display: inline-block;
             background: linear-gradient(92deg,#0FF 0%, #3b5cff 100%);
             color: #212121;
             font-weight: 700;
-            padding: 13px 26px;
-            border-radius: 24px;
-            font-size: 1.06em;
-            margin: 0 auto;
+            padding: 12px 28px;
+            border-radius: 22px;
+            font-size: 1.1em;
+            margin-top: 12px;
             cursor: pointer;
-            box-shadow: 0 3px 16px rgba(11,216,255,0.15);
             text-decoration: none;
-            transition: background 0.24s, color 0.24s;
-            text-align: center;
+            transition: 0.24s;
+            box-shadow: 0 3px 16px rgba(11,216,255,0.18);
         }
-        .cta-btn:hover {
+
+        .download-btn:hover {
             background: linear-gradient(92deg,#3b5cff 0%, #0FF 100%);
             color: #fff;
         }
+
         footer {
             text-align: center;
             margin-top: 45px;
             color: #b6b6b6;
-            font-size: 1em;
         }
+
         @media (max-width:650px){
             .container {
                 padding: 10px 3vw;
@@ -120,53 +122,76 @@
                 flex-direction: column;
                 align-items: center;
             }
-            .logo {
-                width: 100px;
-            }
         }
     </style>
 </head>
+
 <body>
+
     <div class="container">
         <header>
-            <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420?auto=format&fit=crop&w=400&q=80" alt="game app logo" class="logo">
-            <h1>game app</h1>
-            <div class="desc">
-                Discover the hottest and most popular games! Enjoy playing & start winning exclusive rewards now.
-            </div>
+            <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420?auto=format&fit=crop&w=400&q=80" class="logo">
+            <h1>Game App</h1>
+            <div class="desc">Play top world games and unlock amazing rewards.</div>
         </header>
 
         <div class="games-gallery">
-            
+
             <!-- GTA 5 -->
             <div class="game-card">
-                <img src="https://cdn.akamai.steamstatic.com/steam/apps/271590/header.jpg" alt="GTA 5" class="game-image">
+                <img src="https://cdn.akamai.steamstatic.com/steam/apps/271590/header.jpg" class="game-image">
                 <div class="game-title">GTA 5</div>
-                <div class="game-desc">Enjoy this game and download it now.</div>
-                <a href="https://redirectapps.org/cl/i/27lnol" class="cta-btn" target="_blank">Download</a>
+                <a class="download-btn" href="https://redirectapps.org/cl/i/27lnol">Download</a>
             </div>
 
             <!-- Genshin Impact -->
             <div class="game-card">
-                <img src="https://i.ibb.co/35PYxr3T/Genshin-Impact-Keyart.png" alt="Genshin Impact" class="game-image">
+                <img src="https://upload-os-bbs.mihoyo.com/upload/2021/06/02/123713202/a62fb0c4a2a3ee3c85743ffb391d4b4e_457529565962726.jpg" class="game-image">
                 <div class="game-title">Genshin Impact</div>
-                <div class="game-desc">Enjoy this game and download it now.</div>
-                <a href="https://redirectapps.org/cl/i/27lnol" class="cta-btn" target="_blank">Download</a>
+                <a class="download-btn" href="https://redirectapps.org/cl/i/27lnol">Download</a>
             </div>
 
             <!-- Spider Man -->
             <div class="game-card">
-                <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1817070/header.jpg" alt="spider man" class="game-image">
+                <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1817070/header.jpg" class="game-image">
                 <div class="game-title">Spider Man</div>
-                <div class="game-desc">Enjoy this game and download it now.</div>
-                <a href="https://redirectapps.org/cl/i/27lnol" class="cta-btn" target="_blank">Download</a>
+                <a class="download-btn" href="https://redirectapps.org/cl/i/27lnol">Download</a>
+            </div>
+
+            <!-- Fortnite -->
+            <div class="game-card">
+                <img src="https://cdn2.unrealengine.com/fortnite-chapter5-og-image-1920x1080-d23ec606b36c.jpg" class="game-image">
+                <div class="game-title">Fortnite</div>
+                <a class="download-btn" href="https://redirectapps.org/cl/i/27lnol">Download</a>
+            </div>
+
+            <!-- Madden NFL -->
+            <div class="game-card">
+                <img src="https://media.contentapi.ea.com/content/dam/ea/madden-nfl/madden-nfl-24/base-game/keyart/m24-keyart-standard.jpg" class="game-image">
+                <div class="game-title">Madden NFL</div>
+                <a class="download-btn" href="https://redirectapps.org/cl/i/27lnol">Download</a>
+            </div>
+
+            <!-- MLB The Show -->
+            <div class="game-card">
+                <img src="https://cdn.sanity.io/images/gnxhxq1f/production/2e508d57e97dc0b8ea574ce5d4b0efc0db6025a7-1920x1080.jpg" class="game-image">
+                <div class="game-title">MLB The Show</div>
+                <a class="download-btn" href="https://redirectapps.org/cl/i/27lnol">Download</a>
+            </div>
+
+            <!-- NHL Series -->
+            <div class="game-card">
+                <img src="https://media.contentapi.ea.com/content/dam/ea/nhl/nhl-24/common/nhl24-keyart-16x9.jpg" class="game-image">
+                <div class="game-title">NHL Series</div>
+                <a class="download-btn" href="https://redirectapps.org/cl/i/27lnol">Download</a>
             </div>
 
         </div>
     </div>
 
     <footer>
-        &copy; 2025 All rights reserved | game app
+        © 2025 All rights reserved | Game App
     </footer>
+
 </body>
 </html>
