--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -137,51 +138,44 @@
 
         <div class="games-gallery">
 
-            <!-- GTA 5 -->
             <div class="game-card">
                 <img src="https://cdn.akamai.steamstatic.com/steam/apps/271590/header.jpg" class="game-image">
                 <div class="game-title">GTA 5</div>
                 <a class="download-btn" href="https://redirectapps.org/cl/i/27lnol">Download</a>
             </div>
 
-            <!-- Genshin Impact -->
             <div class="game-card">
-                <img src="https://upload-os-bbs.mihoyo.com/upload/2021/06/02/123713202/a62fb0c4a2a3ee3c85743ffb391d4b4e_457529565962726.jpg" class="game-image">
+                <img src="https://i.ibb.co/TMvt5L07/genshintall-1200x1600-4a5697be3925e8cb1f59725a9830cafc.jpg" class="game-image">
                 <div class="game-title">Genshin Impact</div>
                 <a class="download-btn" href="https://redirectapps.org/cl/i/27lnol">Download</a>
             </div>
 
-            <!-- Spider Man -->
             <div class="game-card">
                 <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1817070/header.jpg" class="game-image">
                 <div class="game-title">Spider Man</div>
                 <a class="download-btn" href="https://redirectapps.org/cl/i/27lnol">Download</a>
             </div>
 
-            <!-- Fortnite -->
             <div class="game-card">
-                <img src="https://cdn2.unrealengine.com/fortnite-chapter5-og-image-1920x1080-d23ec606b36c.jpg" class="game-image">
+                <img src="https://i.ibb.co/nMmMgSJK/fneco-2025-keyart-thumb-1920x1080-de84aedabf4d.jpg" class="game-image">
                 <div class="game-title">Fortnite</div>
                 <a class="download-btn" href="https://redirectapps.org/cl/i/27lnol">Download</a>
             </div>
 
-            <!-- Madden NFL -->
             <div class="game-card">
-                <img src="https://media.contentapi.ea.com/content/dam/ea/madden-nfl/madden-nfl-24/base-game/keyart/m24-keyart-standard.jpg" class="game-image">
+                <img src="https://i.ibb.co/g25KqCv/maxresdefault.jpg" class="game-image">
                 <div class="game-title">Madden NFL</div>
                 <a class="download-btn" href="https://redirectapps.org/cl/i/27lnol">Download</a>
             </div>
 
-            <!-- MLB The Show -->
             <div class="game-card">
-                <img src="https://cdn.sanity.io/images/gnxhxq1f/production/2e508d57e97dc0b8ea574ce5d4b0efc0db6025a7-1920x1080.jpg" class="game-image">
+                <img src="https://i.ibb.co/m51yJrWC/images.jpg" class="game-image">
                 <div class="game-title">MLB The Show</div>
                 <a class="download-btn" href="https://redirectapps.org/cl/i/27lnol">Download</a>
             </div>
 
-            <!-- NHL Series -->
             <div class="game-card">
-                <img src="https://media.contentapi.ea.com/content/dam/ea/nhl/nhl-24/common/nhl24-keyart-16x9.jpg" class="game-image">
+                <img src="https://i.ibb.co/mrmbvkRK/71-Kf-VQVjit-L-AC-UF1000-1000-QL80.jpg" class="game-image">
                 <div class="game-title">NHL Series</div>
                 <a class="download-btn" href="https://redirectapps.org/cl/i/27lnol">Download</a>
             </div>
